--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,9 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
+  background-color: rgba(3, 2, 27, 0.703);
+
   min-height: 100vh;
   display: flex;
   flex-direction: column;
