--- a/src/Components/HomePage/Home/Home.css
+++ b/src/Components/HomePage/Home/Home.css
@@ -1,156 +1,156 @@
 .section {
-    width: 100%;
-    min-height: 100vh;
-    background-image:linear-gradient(
-      54deg,rgba(0, 0, 0, 0.585) 34%,rgba(23, 26, 66, 0.331)), url('../../../images/home.png');
-      background-repeat: no-repeat;
-    color: rgb(255, 255, 255);
-    background-size: cover;
-    position: relative;
-    
+  width: 100%;
+  min-height: 100vh;
+  background-image: linear-gradient(
+      54deg,
+      rgba(0, 0, 0, 0.585) 34%,
+      rgba(23, 26, 66, 0.331)
+    ),
+    url("../../../images/home.png");
+  background-repeat: no-repeat;
+  color: rgb(255, 255, 255);
+  background-size: cover;
+  position: relative;
+}
+.main {
+  height: 80vh;
+}
+@keyframes change {
+  0% {
+    background-position: 0 50%;
   }
-  .main {
-    height: 80vh;
+  50% {
+    background-position: 100% 50%;
   }
-  @keyframes change {
-    0% {
-      background-position: 0 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0 50%;
+  100% {
+    background-position: 0 50%;
+  }
+}
 
-    }
-  }
-  
-  .home-body {
-    height: 75%;
-  }
-  
-  .profile-img {
-    text-align: center;
-  }
-  
-  .profile-img img {
-    height: 200px;
-    /* border: 5px solid yellow; */
-    border-radius: 360px;
-  }
-  
-  .intro {
-    text-align: center;
-  }
-  h1:hover{
-    transition: 1s;
-  
-    color: rgb(243, 243, 18);
-  }
-  
-  .typist span {
-    font-size: larger;
-  }
-  
-  .icons {
-    display: flex;
-    height: 20px;
-  }
-  .icons h2 {
-    color: white;
-    margin-right: 30px;
-    transition: 0.3s;
-    height: 100px;
-    text-decoration: none;
-  }
-  
-  .icons h2 :hover {
-    transform: translateY(-2px);
-    color: rgba(92, 154, 230, 0.705);
+.home-body {
+  height: 75%;
+}
+
+.profile-img {
+  text-align: center;
+}
+
+.profile-img img {
+  height: 200px;
+  /* border: 5px solid yellow; */
+  border-radius: 360px;
+}
+
+.intro {
+  text-align: center;
+}
+h1:hover {
   transition: 1s;
 
+  color: rgb(243, 243, 18);
+}
+
+.typist span {
+  font-size: larger;
+}
+
+.icons {
+  display: flex;
+  height: 20px;
+}
+.icons h2 {
+  color: white;
+  margin-right: 30px;
+  transition: 0.3s;
+  height: 100px;
+  text-decoration: none;
+}
+
+.icons h2 :hover {
+  transform: translateY(-2px);
+  color: rgba(92, 154, 230, 0.705);
+  transition: 1s;
+}
+
+.box-area {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.box-area ol {
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 25px;
+  height: 25px;
+  background: rgba(255, 255, 255, 0.2);
+  animation: animate 20s linear infinite;
+  bottom: -150px;
+}
+
+.box-area ol:nth-child(1) {
+  left: 86%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
+}
+
+.box-area ol:nth-child(2) {
+  left: 12%;
+  width: 30px;
+  height: 30px;
+  animation-delay: 1.5s;
+  animation-duration: 10s;
+}
+.box-area ol:nth-child(3) {
+  left: 70%;
+  width: 50px;
+  height: 50px;
+  animation-delay: 3.5s;
+}
+.box-area ol:nth-child(4) {
+  left: 40%;
+  width: 30px;
+  height: 30px;
+  animation-delay: 0s;
+  animation-duration: 10s;
+}
+.box-area ol:nth-child(5) {
+  left: 65%;
+  width: 40px;
+  height: 40px;
+  animation-delay: 0s;
+}
+.box-area ol:nth-child(6) {
+  left: 15%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0.5s;
+}
+.box-area ol:nth-child(7) {
+  left: 69%;
+  width: 40px;
+  height: 40px;
+  animation-delay: 2.5s;
+}
+.box-area ol:nth-child(8) {
+  left: 45%;
+  width: 45px;
+  height: 45px;
+  animation-delay: 6.5s;
+}
+
+@keyframes animate {
+  0% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
   }
-  
-  .box-area {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+  100% {
+    transform: translateY(-800px) rotate(360deg);
+    opacity: 1;
   }
-  
-  .box-area ol {
-    position: absolute;
-    display: block;
-    list-style: none;
-    width: 25px;
-    height: 25px;
-    background: rgba(255, 255, 255, 0.2);
-    animation: animate 20s linear infinite;
-    bottom: -150px;
-  }
-  
-  .box-area ol:nth-child(1) {
-    left: 86%;
-    width: 80px;
-    height: 80px;
-    animation-delay: 0s;
-  }
-  
-  .box-area ol:nth-child(2) {
-    left: 12%;
-    width: 30px;
-    height: 30px;
-    animation-delay: 1.5s;
-    animation-duration: 10s;
-  }
-  .box-area ol:nth-child(3) {
-    left: 70%;
-    width: 50px;
-    height: 50px;
-    animation-delay: 3.5s;
-  }
-  .box-area ol:nth-child(4) {
-    left: 40%;
-    width: 30px;
-    height: 30px;
-    animation-delay: 0s;
-    animation-duration: 10s;
-  }
-  .box-area ol:nth-child(5) {
-    left: 65%;
-    width: 40px;
-    height: 40px;
-    animation-delay: 0s;
-  }
-  .box-area ol:nth-child(6) {
-    left: 15%;
-    width: 80px;
-    height: 80px;
-    animation-delay: 0.5s;
-  }
-  .box-area ol:nth-child(7) {
-    left: 69%;
-    width: 40px;
-    height: 40px;
-    animation-delay: 2.5s;
-  }
-  .box-area ol:nth-child(8) {
-    left: 45%;
-    width: 45px;
-    height: 45px;
-    animation-delay: 6.5s;
-  }
-  
-  @keyframes animate {
-    0% {
-      transform: translateY(0) rotate(0deg);
-      opacity: 1;
-    }
-    100% {
-      transform: translateY(-800px) rotate(360deg);
-      opacity: 1;
-    }
-  }
-  
+}
